Fix displayValue overflowing display

--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body {
 }
 
 #display {
-    font-size: 50px;
+    overflow-wrap: break-word;
+    font-size: 45px;
     font-family: 'Orbitron', sans-serif;
     text-align: right;
     border: 2px solid black;
